Zwischenstand Routing Test hinzugefügt

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a [routerLink]="['/home']">Homepage</a>
+<a [routerLink]="['/test']">Test</a>
 
 <div class='container'>
     <router-outlet></router-outlet>
