Startseite hinzugefügt und app-routing.module kommentiert

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,4 +1,7 @@
+<!-- Navigation -->
+<a [routerLink]="['/']">Homepage</a>
 <a [routerLink]="['/test']">Test</a>
+<!-- Ende -->
 
 <div class='container'>
     <router-outlet></router-outlet>
