#29 Login Component erstellt und Ordnerstruktur geändert

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!-- Navigation -->
 <a [routerLink]="['/']">Homepage</a>
-<a [routerLink]="['/test']">Teeeeest</a>
+<a [routerLink]="['/login']">Login</a>
 <!-- Ende -->
 
 <div class='container'>
