--- a/project/src/app/components/login/login.component.html
+++ b/project/src/app/components/login/login.component.html
@@ -1,3 +1,34 @@
-<p>
-  login works!
-</p>
+<form class="form-horizontal">
+  <fieldset>
+
+    <!-- Form Name -->
+    <legend>Form Name</legend>
+
+    <!-- Text input-->
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="textinput">Text Input</label>
+      <div class="col-md-4">
+        <input id="textinput" name="textinput" type="text" placeholder="placeholder" class="form-control input-md">
+        <span class="help-block">help</span>
+      </div>
+    </div>
+
+    <!-- Password input-->
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="passwordinput">Password Input</label>
+      <div class="col-md-4">
+        <input id="passwordinput" name="passwordinput" type="password" placeholder="placeholder" class="form-control input-md">
+        <span class="help-block">help</span>
+      </div>
+    </div>
+
+    <!-- Button -->
+    <div class="form-group">
+      <label class="col-md-4 control-label" for="singlebutton">Single Button</label>
+      <div class="col-md-4">
+        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Button</button>
+      </div>
+    </div>
+
+  </fieldset>
+</form>
