Bootstrap-Js eingebunden, Navbar & Login Formular bearbeitet

--- a/project/src/app/components/login/login.component.html
+++ b/project/src/app/components/login/login.component.html
@@ -2,31 +2,29 @@
   <fieldset>
 
     <!-- Form Name -->
-    <legend>Form Name</legend>
+    <legend>Login</legend>
 
     <!-- Text input-->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="textinput">Text Input</label>
+      <label class="col-md-4 control-label" for="textinput">Benutzername</label>
       <div class="col-md-4">
-        <input id="textinput" name="textinput" type="text" placeholder="placeholder" class="form-control input-md">
-        <span class="help-block">help</span>
+        <input id="textinput" name="textinput" type="text" class="form-control input-md">
       </div>
     </div>
 
     <!-- Password input-->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="passwordinput">Password Input</label>
+      <label class="col-md-4 control-label" for="passwordinput">Password</label>
       <div class="col-md-4">
-        <input id="passwordinput" name="passwordinput" type="password" placeholder="placeholder" class="form-control input-md">
-        <span class="help-block">help</span>
+        <input id="passwordinput" name="passwordinput" type="password" class="form-control input-md">
       </div>
     </div>
 
     <!-- Button -->
     <div class="form-group">
-      <label class="col-md-4 control-label" for="singlebutton">Single Button</label>
+      <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-4">
-        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Button</button>
+        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Anmelden</button>
       </div>
     </div>
 
