#30 refactoring und auswerten des loginformulars

--- a/project/src/app/components/login/login.component.html
+++ b/project/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="textinput">Benutzername</label>
       <div class="col-md-4">
-        <input id="textinput" name="textinput" type="text" class="form-control input-md">
+        <input id="textinput" name="textinput" type="text" class="form-control input-md" [(ngModel)]="username">
       </div>
     </div>
 
@@ -24,7 +24,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-4">
-        <button id="singlebutton" name="singlebutton" class="btn btn-primary">Anmelden</button>
+        <button id="singlebutton" name="singlebutton" class="btn btn-primary" (click)="save()">Anmelden</button>
       </div>
     </div>
 
