#32 MessageBox eingebunden & Refactoring

--- a/project/src/app/components/messagebox/messagebox.component.html
+++ b/project/src/app/components/messagebox/messagebox.component.html
@@ -1,5 +1,5 @@
 <div class="messageBoxRahmen">
-  <div class="alert alert-{{messageBoxType}}" *ngIf="message" [@messageBoxAnimation]>
+  <div class="alert alert-{{messageType}}" *ngIf="message" [@messageBoxAnimation]>
     <strong>{{message}}</strong>
   </div>
 </div>
