--- a/project/src/app/components/messagebox/messagebox.component.css
+++ b/project/src/app/components/messagebox/messagebox.component.css
@@ -1,9 +1,11 @@
 .messageBoxRahmen {
-    height: 30px;
-    margin-left: 30px;
+    height: 50px;
+    width: 100%;
   }
   
   .alert {
-    padding: 4px;
+    padding: 10px;
   }
-  
+  .alert strong {
+    font-size: 20px;
+  }
