#22 Footer hinzugefügt, MessageBox abgeändert, Impressum, AGB, Datenschutzerklärung hinzugefügt

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -38,3 +38,11 @@
     <app-messagebox></app-messagebox>
     <router-outlet></router-outlet>
 </div>
+
+<div class='footer navbar-fixed-bottom carscout-footer'>
+    <a href="/impressum">Impressum</a>
+    |
+    <a href="/privacyPolicy">Datenschutzerklärung</a>
+    |
+    <a href="/agb">AGB</a>
+</div>
