--- a/project/src/app/components/messagebox/messagebox.component.html
+++ b/project/src/app/components/messagebox/messagebox.component.html
@@ -1,5 +1,5 @@
-<div class="messageBoxRahmen">
-  <div class="alert alert-{{messageType}}" *ngIf="message" role="alert" [@messageBoxAnimation]>
+<div class="messageBoxRahmen" *ngIf="message">
+  <div class="alert alert-{{messageType}}" role="alert" [@messageBoxAnimation]>
     <strong>{{message}}</strong>
   </div>
 </div>
