#30 Cookie beim einloggen und ausloggen

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -18,7 +18,8 @@
                     <a href="">Startseite</a>
                 </li>
                 <li>
-                    <a href="/login">Login</a>
+                    <a *ngIf="cookieService.get('online') == undefined" href="/login">Login</a>
+                    <a *ngIf="cookieService.get('online')" href="/logout">Logout</a>
                 </li>
 
             </ul>
