--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -20,6 +20,9 @@
                 <li>
                     <a href="/login">Login</a>
                 </li>
+                <li>
+                    <a href="/register">Registrieren</a>
+                </li>
 
             </ul>
             <form class="navbar-form navbar-left">
