--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -1,3 +1,14 @@
-<p>
-  home works!
-</p>
+<div class="row featurette">
+  <div class="col-md-5">
+    <img class="featurette-image img-fluid mx-auto" width="400" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
+  </div>
+  <div class="col-md-7">
+    <h2 class="featurette-heading">First featurette heading.
+      <span class="text-muted">It'll blow your mind.</span>
+    </h2>
+    <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo
+      cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+  </div>
+</div>
+
+<hr class="featurette-divider">
