--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -7,6 +7,7 @@
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand logo" href="/"><img src="..\assets\images\logo_54_30.png"></a>
         </div>
@@ -15,6 +16,9 @@
             <ul class="nav navbar-nav">
                 <li>
                     <a href="">Startseite</a>
+                </li>
+                <li>
+                    <a *ngIf="cookieService.get('online')" href="/">Kontoeinstellungen (TBD)</a>
                 </li>
                 <li>
                     <a *ngIf="cookieService.get('online') == undefined" href="/login">Login</a>
