--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -1,6 +1,7 @@
+ {{cars}}
 <ul>
-  <li *ngFor="let car of cars">
-    <div class="row featurette">
+  <li *ngFor="let car of cars"> FOO
+    <!--<div class="row featurette">
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" width="100%" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
       </div>
@@ -20,8 +21,7 @@
         </ul>
         <button type="button" class="btn btn-primary" (click)="toOffer(car.id)">Zum Angebot</button>
       </div>
-      <!-- Weitere Buttons hier! -->
     </div>
-    <hr class="featurette-divider">
+    <hr class="featurette-divider">-->
   </li>
 </ul>
