--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -43,7 +43,7 @@
 </nav>
 
 <div class='container'>
-    <app-messagebox></app-messagebox>
+    <app-message-box></app-message-box>
     <router-outlet></router-outlet>
 </div>
 
