--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -5,18 +5,18 @@
         <img class="featurette-image img-fluid mx-auto" width="100%" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
       </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">{{ car.name }} {{ car.hersteller }} {{ car.modell }}
-          <span class="text-muted price">{{ car.preis }} €</span>
+        <h2 class="featurette-heading">{{ car.modell }} {{ car.manufacturer }}
+          <span class="text-muted price">{{ car.price }} €</span>
         </h2>
         <ul class="lead infoBox">
-          <li> Erstzulassung: {{ car.erstzulassung }}</li>
-          <li> Fahrzeugstand: {{ car.fahrzeugstand }}</li>
-          <li> Kategorie: {{ car.kategorie }}</li>
+          <li> Erstzulassung: {{ car.year }}</li>
+          <li> Fahrzeugstand: {{ car.state }}</li>
+          <li> Kategorie: {{ car.category }}</li>
         </ul>
         <ul class="lead">
-          <li> Kilometerstand: {{ car.kilometerstand }} km</li>
-          <li> Leistung: {{ car.leistung }} PS</li>
-          <li> Kraftstoffart: {{ car.kraftstoffart }}</li>
+          <li> Kilometerstand: {{ car.km_driven }} km</li>
+          <li> Leistung: {{ car.ps }} PS</li>
+          <li> Kraftstoffart: {{ car.fuel_type }}</li>
         </ul>
         <button type="button" class="btn btn-primary" (click)="toOffer(car.id)">Zum Angebot</button>
       </div>
