--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -30,12 +30,7 @@
                     <a *ngIf="cookieService.get('online') == undefined" href="/register">Registrieren</a>
                 </li>
             </ul>
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control">
-                </div>
-                <button type="submit" class="btn btn-default">Suche</button>
-            </form>
+            <app-search></app-search>
         </div>
         <!-- /.navbar-collapse -->
     </div>
