#83 Suchformular angepasst & Pipe hinzugefügt

--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <ul>
-  <li *ngFor="let car of cars">
+  <li *ngFor="let car of cars | carSearchFilter : searchString">
     <div class="row featurette">
       <div class="col-md-5">
         <img class="featurette-image img-fluid mx-auto" width="100%" height="250" src="assets/images/amg_c.jpg" alt="Generic placeholder image">
