--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -30,7 +30,11 @@
                     <a *ngIf="cookieService.get('online') == undefined" href="/register">Registrieren</a>
                 </li>
             </ul>
-            <app-search></app-search>
+            <form class="navbar-form navbar-left">
+                <div class="form-group">
+                    <input type="text" placeholder="Name des Autos" class="form-control" [(ngModel)]="searchText" name="search">
+                </div>
+            </form>
         </div>
         <!-- /.navbar-collapse -->
     </div>
