--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -32,8 +32,9 @@
             </ul>
             <form class="navbar-form navbar-left">
                 <div class="form-group">
-                    <input type="text" placeholder="Name des Autos" class="form-control" [(ngModel)]="searchText" name="search">
+                    <input type="text" class="form-control">
                 </div>
+                <button type="submit" class="btn btn-default">Suche</button>
             </form>
         </div>
         <!-- /.navbar-collapse -->
