--- a/project/src/app/components/proposal/proposal.component.html
+++ b/project/src/app/components/proposal/proposal.component.html
@@ -115,7 +115,7 @@
   <label class="col-md-4 control-label" for="radios">Anzahl Sitze</label>
   <div class="col-md-4"> 
     <label class="radio-inline" for="radios-0">
-      <input name="sitze" id="radios-0" value="1" type="radio">
+      <input name="sitze" id="radios-0" value="1" type="radio" checked>
       1
     </label> 
     <label class="radio-inline" for="radios-1">
@@ -150,7 +150,7 @@
   <label class="col-md-4 control-label" for="radios">Anzahl Türen</label>
   <div class="col-md-4"> 
     <label class="radio-inline" for="radios-0">
-      <input name="tueren" id="radios-0" value="2/3" type="radio">
+      <input name="tueren" id="radios-0" value="2/3" type="radio" checked>
       2/3
     </label> 
     <label class="radio-inline" for="radios-1">
