--- a/project/src/app/components/proposal/proposal.component.html
+++ b/project/src/app/components/proposal/proposal.component.html
@@ -157,6 +157,11 @@
       <input name="tueren" id="radios-1" value="4/5" type="radio">
       4/5
     </label>
+    <label class="radio-inline" for="radios-1">
+      <input name="tueren" id="radios-2" value="6/7" type="radio">
+      6/7
+    </label>  
+    
   </div>
 </div>
 
@@ -180,7 +185,7 @@
 <div class="form-group">
   <label class="col-md-4 control-label" for="kilometer">Kilometerstand</label>  
   <div class="col-md-4">
-  <input id="kilometer" name="kilometer" class="form-control input-md" type="text">
+  <input id="kilometer" name="kilometer" class="form-control input-md" type="number" step="1000">
     
   </div>
 </div>
