#63 angebot-detail.component refactoring

--- a/project/src/app/components/angebot-detail/angebot-detail.component.html
+++ b/project/src/app/components/angebot-detail/angebot-detail.component.html
@@ -1,6 +1,17 @@
 <div class="jumbotron">
-  <h1>{{}}</h1>
-  <p>{{fhz.price}}€</p>
+  <h1>{{fhz.modell}} {{fhz.manufacturer}} </h1>
+  <p></p>
+  <p>Preis
+    <span class="badge" STYLE="color: black; font-size: 19pt">{{fhz.price}}€</span>
+  </p>
+  <p></p>
+  <p>Erstzulassung : {{fhz.year}}</p>
+  <p>Kilometerstand : {{fhz.km_driven}}km</p>
+  <p>Farbe: {{fhz.colour}}</p>
+  <p>Kategorie: {{fhz.category}}</p>
+  <p>Fahrzeugstand: {{fhz.state}}</p>
+  <p>PS: {{fhz.ps}}</p>
+
   <p>
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
