--- a/project/src/app/components/result-page/result-page.component.html
+++ b/project/src/app/components/result-page/result-page.component.html
@@ -1,3 +1,7 @@
+<div class="alert alert-info" role="alert">
+  <b>Anzahl Treffer: {{ counter }}</b>
+</div>
+
 <ul>
   <li *ngFor="let car of cars">
     <div class="row featurette">
