Car-Model erweitert mit Spalte "Mängel"

--- a/project/src/app/components/home/home.component.html
+++ b/project/src/app/components/home/home.component.html
@@ -17,6 +17,7 @@
           <li> Kilometerstand: {{ car.km_driven }} km</li>
           <li> Leistung: {{ car.ps }} PS</li>
           <li> Kraftstoffart: {{ car.fuel_type }}</li>
+          <li> Mängel: {{ car.defects }}</li>
         </ul>
         <button type="button" class="btn btn-primary" (click)="toOffer(car.id)">Zum Angebot</button>
       </div>
