--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -31,6 +31,11 @@
                 </li>
             </ul>
             <app-search></app-search>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a *ngIf="cookieService.get('online')" href="/favoriten">Favoriten</a>
+                </li>
+            </ul>
         </div>
         <!-- /.navbar-collapse -->
     </div>
