#77 Car Tabelle erweitert

--- a/project/src/app/app.component.html
+++ b/project/src/app/app.component.html
@@ -29,6 +29,9 @@
                 <li>
                     <a *ngIf="cookieService.get('online') == undefined" href="/register">Registrieren</a>
                 </li>
+                <li>
+                    <a *ngIf="cookieService.get('online') == undefined" href="/addCar">Angebotserstellung</a>
+                </li>
             </ul>
             <app-search></app-search>
         </div>
