--- a/project/src/app/components/proposal/proposal.component.html
+++ b/project/src/app/components/proposal/proposal.component.html
@@ -8,7 +8,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="selectbasic">Hersteller</label>
       <div class="col-md-4">
-        <select id="selectBrand" name="selectBrand" class="form-control">
+        <select id="selectBrand" name="selectBrand" class="form-control" [(ngModel)]="manufacturer">
           <option value="leer"></option>
           <option value="Acura">Acura</option>
           <option value="Alfa Romeo">Alfa Romeo</option>
@@ -87,7 +87,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="modell">Modell</label>
       <div class="col-md-4">
-        <input id="modell" name="modell" class="form-control input-md" type="text">
+        <input id="modell" name="modell" class="form-control input-md" type="text" [(ngModel)]="modell">
 
       </div>
     </div>
@@ -96,7 +96,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="fahrzeugtyp">Fahrzeugtyp</label>
       <div class="col-md-4">
-        <select id="fahrzeugtyp" name="fahrzeugtyp" class="form-control">
+        <select id="fahrzeugtyp" name="fahrzeugtyp" class="form-control" [(ngModel)]="category">
           <option value="leer"></option>
           <option value="cabrio">Cabrio</option>
           <option value="limousine">Limousine</option>
@@ -115,25 +115,25 @@
       <label class="col-md-4 control-label" for="radios">Anzahl Sitze</label>
       <div class="col-md-4">
         <label class="radio-inline" for="radios-0">
-          <input name="sitze" id="radios-0" value="1" type="radio" checked> 1
+          <input name="sitze" id="radios-0" value="1" type="radio" [(ngModel)]="seats"> 1
         </label>
         <label class="radio-inline" for="radios-1">
-          <input name="sitze" id="radios-1" value="2" type="radio"> 2
+          <input name="sitze" id="radios-1" value="2" type="radio" [(ngModel)]="seats"> 2
         </label>
         <label class="radio-inline" for="radios-2">
-          <input name="sitze" id="radios-2" value="3" type="radio"> 3
+          <input name="sitze" id="radios-2" value="3" type="radio" [(ngModel)]="seats"> 3
         </label>
         <label class="radio-inline" for="radios-3">
-          <input name="sitze" id="radios-3" value="4" type="radio"> 4
+          <input name="sitze" id="radios-3" value="4" type="radio" [(ngModel)]="seats"> 4
         </label>
         <label class="radio-inline" for="radios-4">
-          <input name="sitze" id="radios-4" value="5" type="radio"> 5
+          <input name="sitze" id="radios-4" value="5" type="radio" [(ngModel)]="seats"> 5
         </label>
         <label class="radio-inline" for="radios-5">
-          <input name="sitze" id="radios-5" value="6" type="radio"> 6
+          <input name="sitze" id="radios-5" value="6" type="radio" [(ngModel)]="seats"> 6
         </label>
         <label class="radio-inline" for="radios-6">
-          <input name="sitze" id="radios-6" value="7" type="radio"> 7
+          <input name="sitze" id="radios-6" value="7" type="radio" [(ngModel)]="seats"> 7
         </label>
       </div>
     </div>
@@ -143,13 +143,13 @@
       <label class="col-md-4 control-label" for="radios">Anzahl Türen</label>
       <div class="col-md-4">
         <label class="radio-inline" for="radios-0">
-          <input name="tueren" id="radios-0" value="2/3" type="radio" checked> 2/3
+          <input name="tueren" id="radios-0" value="2/3" type="radio" [(ngModel)]="number_of_doors"> 2/3
         </label>
         <label class="radio-inline" for="radios-1">
-          <input name="tueren" id="radios-1" value="4/5" type="radio"> 4/5
+          <input name="tueren" id="radios-1" value="4/5" type="radio" [(ngModel)]="number_of_doors"> 4/5
         </label>
         <label class="radio-inline" for="radios-1">
-          <input name="tueren" id="radios-2" value="6/7" type="radio"> 6/7
+          <input name="tueren" id="radios-2" value="6/7" type="radio" [(ngModel)]="number_of_doors"> 6/7
         </label>
 
       </div>
@@ -160,7 +160,7 @@
       <label class="col-md-4 control-label" for="q">Baujahr</label>
       <div class="col-md-4">
         <input id="baujahr" name="baujahr" placeholder="Baujahr" class="form-control input-md" type="number" min="1900" max="2099"
-          step="1" value="2018">
+          step="1" value="2018" [(ngModel)]="year">
       </div>
     </div>
 
@@ -168,7 +168,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="q">Erstzulassung</label>
       <div class="col-md-4">
-        <input id="erstzulassung" name="erstzulassung" class="form-control input-md" type="date">
+        <input id="erstzulassung" name="erstzulassung" class="form-control input-md" type="date" [(ngModel)]="registration_date">
       </div>
     </div>
 
@@ -176,8 +176,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="kilometer">Kilometerstand</label>
       <div class="col-md-4">
-        <input id="kilometer" name="kilometer" class="form-control input-md" type="number" step="1000">
-
+        <input id="kilometer" name="kilometer" class="form-control input-md" type="number" step="1000" [(ngModel)]="km_driven">
       </div>
     </div>
 
@@ -185,7 +184,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="Leistung">Leistung</label>
       <div class="col-md-4">
-        <input id="Leistung" name="Leistung" class="form-control input-md" type="text">
+        <input id="Leistung" name="Leistung" class="form-control input-md" type="text" [(ngModel)]="ps">
 
       </div>
     </div>
@@ -194,7 +193,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="Preis">Preis</label>
       <div class="col-md-4">
-        <input id="Preis" name="Preis" class="form-control input-md" type="text">
+        <input id="Preis" name="Preis" class="form-control input-md" type="text" [(ngModel)]="price">
 
       </div>
     </div>
@@ -203,7 +202,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="Kraftstoff">Kraftstoffart</label>
       <div class="col-md-4">
-        <select id="Kraftstoff" name="Kraftstoff" class="form-control">
+        <select id="Kraftstoff" name="Kraftstoff" class="form-control" [(ngModel)]="fuel_type">
           <option value="leer"></option>
           <option value="Benzin">Benzin</option>
           <option value="Diesel">Diesel</option>
@@ -218,7 +217,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="Getriebe">Getriebe</label>
       <div class="col-md-4">
-        <select id="Getriebe" name="Getriebe" class="form-control">
+        <select id="Getriebe" name="Getriebe" class="form-control" [(ngModel)]="transmission">
           <option value="leer"></option>
           <option value="Schaltgetriebe">Schaltgetriebe</option>
           <option value="Automatik">Automatik</option>
@@ -231,7 +230,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="Farbe">Farbe</label>
       <div class="col-md-4">
-        <select id="Farbe" name="Farbe" class="form-control">
+        <select id="Farbe" name="Farbe" class="form-control" [(ngModel)]="colour">
           <option value="leer"></option>
           <option value="beige">beige</option>
           <option value="schwarz">schwarz</option>
@@ -253,12 +252,12 @@
       <div class="col-md-4">
         <div class="checkbox">
           <label for="Innenausstattung-0">
-            <input name="Innenausstattung" id="Innenausstattung-0" value="Klimaanlage" type="checkbox"> Klimaanlage
+            <input name="Innenausstattung" id="Innenausstattung-0" value="Klimaanlage" type="checkbox" [(ngModel)]="interior"> Klimaanlage
           </label>
         </div>
         <div class="checkbox">
           <label for="Innenausstattung-1">
-            <input name="Innenausstattung" id="Innenausstattung-1" value="Bluetooth" type="checkbox"> Bluetooth
+            <input name="Innenausstattung" id="Innenausstattung-1" value="Bluetooth" type="checkbox" [(ngModel)]="interior"> Bluetooth
           </label>
         </div>
         <div class="checkbox">
@@ -470,7 +469,7 @@
     <div class="form-group">
       <label class="col-md-4 control-label" for="singlebutton"></label>
       <div class="col-md-4">
-        <button id="singlebutton" name="singlebutton" class="btn btn-success">Angebot erstellen</button>
+        <button id="singlebutton" name="singlebutton" class="btn btn-success" (click)="saveCar()">Angebot erstellen</button>
       </div>
     </div>
 
