#80 Button im Html Formular eingearbeitet
Files Rückgabefunktion, damit es beim Absenden und speichern Bildfiles bekommt

--- a/project/src/app/components/proposal/proposal.component.html
+++ b/project/src/app/components/proposal/proposal.component.html
@@ -467,12 +467,7 @@
     </div>
 
     <!-- Erstellen Button -->
-    <div class="form-group">
-      <label class="col-md-4 control-label" for="singlebutton"></label>
-      <div class="col-md-4">
-        <button id="singlebutton" name="singlebutton" class="btn btn-success">Angebot erstellen</button>
-      </div>
-    </div>
+    <app-image-uploader> </app-image-uploader>
 
   </fieldset>
 </form>
