--- a/project/src/app/components/image-uploader/image-uploader.component.html
+++ b/project/src/app/components/image-uploader/image-uploader.component.html
@@ -1,7 +1,10 @@
-<p>
-  <form #yourForm="ngForm" (ngSubmit)="onSubmit()">
+<html>
+<div> </div>
+<form #yourForm="ngForm" (ngSubmit)="onSubmit()">
 
-    <input type="file" #fileupload [(ngModel)]="myFile" name="myFile" (change)="fileEvent($event)" />
-    <button *ngif="reachedMaximumAllowed()" type="submit">Bild Upload</button>
-  </form>
-</p>
+  <input type="file" #fileupload [(ngModel)]="myFile" name="myFile" (change)="fileChangeEvent($event)" />
+  <button *ngIf="underUploadLimit" type="submit">Bild Uploaden</button>
+</form>
+<div> </div>
+
+</html>
