--- a/project/src/app/components/register/register.component.html
+++ b/project/src/app/components/register/register.component.html
@@ -2,13 +2,13 @@
   <fieldset>
 
     <!-- Form Name -->
-    <legend>Regristieren</legend>
+    <legend>Registrieren</legend>
 
     <!-- Text input-->
     <div class="form-group">
       <label class="col-md-4 control-label" for="textinput">Benutzername</label>
       <div class="col-md-4">
-        <input id="textinput" name="textinput" type="text" placeholder="Max Mustermann" class="form-control input-md" [(ngModel)]="benutzer.name">
+        <input id="textinput" name="textinput" type="text" placeholder="Max Mustermann" class="form-control input-md" [(ngModel)]="benutzer.username">
       </div>
     </div>
 
